# diplom

./: .gitignore  CMakeLists.txt
01_sie/: CMakeLists.txt  Dll1.cpp  bostTRy.py
